design changes pages added

--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -5,8 +5,11 @@
 
     <!-- Ensures that the UI is properly scaled in the Shopify Mobile app -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css" integrity="sha512-Ez0cGzNzHR1tYAv56860NLspgUGuQw16GiOOp/I2LuTmpSK9xDXlgJz3XN4cnpXWDmkNBKXR/VDMTCnAaEooxA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="./jeeblystyle.css">
+     
     <link href="https://use.fontawesome.com/9a4d1ae3b6.css" media="all" rel="stylesheet">
+    <link rel="stylesheet" href="./datatimebox.css">
+    <link rel="stylesheet" href="./jeeblystyle.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
     <script type="module">
       if (!import.meta.env || !import.meta.env.PROD) {
         // Because the base HTML is rendered in the server side, we need to manually embed the code to enable HMR in our
@@ -21,6 +24,5 @@
   <body>
     <div id="app"><!--index.jsx injects App.jsx here--></div>
     <script type="module" src="/index.jsx"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.min.js" integrity="sha512-EKWWs1ZcA2ZY9lbLISPz8aGR2+L7JVYqBAYTq5AXgBkSjRSuQEGqWx8R1zAX16KdXPaCjOCaKE8MCpU0wcHlHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
